# MoonPoker-PublicPage

./: CNAME  IMG_0726.mov  README.md
UMLs/: README.md  backend.plantuml  frontend.plantuml  initial_class_diagram.plantuml  message_gen_support.plantuml  moon_poker.plantuml  proto_parsing.plantuml
initial-design/: README.md  class_diagram.plantuml  game_class_diagram.plantuml
src/: CMakeLists.txt  nlh_main.cpp
src/core/: player_state.cpp  seat.cpp
src/core/evaluators/: badugi_evaluator.cpp  eight_or_better_evaluator.cpp  lowball_evaluator.cpp  omaha_eight_evaluator.cpp  omaha_evaluator.cpp  standard_evaluator.cpp
src/core/games/: abstract_game.cpp  community_card_structure.cpp  no_limit_holdem.cpp
src/include/MoonPoker/: deck.hpp  game_experimental.hpp  game_shell.hpp  player.hpp  playerConnection.hpp  player_state.hpp  seat.hpp  seat_shell.hpp  table_shell.hpp
src/include/MoonPoker/evaluators/: badugi_evaluator.hpp  eight_or_better_evaluator.hpp  hand_evaluator.hpp  lowball_evaluator.hpp  omaha_eight_evaluator.hpp  omaha_evaluator.hpp  standard_evaluator.hpp
src/include/MoonPoker/games/: abstract_game.hpp  community_card_structure.hpp  no_limit_holdem.hpp
src/include/MoonPoker/util/: strong_int.hpp
tests/: CMakeLists.txt  general.cpp
tests/evaluator_tests/: badugi_evaluator_test.cpp  eight_or_better_evaluator_test.cpp  lowball_evaluator_test.cpp  omaha_eight_evaluator_test.cpp  omaha_evaluator_test.cpp  standard_evaluator_test.cpp
tests/game_tests/: close_action_test.cpp  showdown_test.cpp  update_min_bet_test.cpp  validate_bet_test.cpp
